.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Schedule_Setting__c.object
<CustomObject>
    <fields>
        <fullName>provar__Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule__c</fullName>
        <label>Test Plan Schedule</label>
        <referenceTo>provar__Test_Plan_Schedule__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Settings</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Value_Encrypted__c</fullName>
        <label>Value Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>provar__Value_Long__c</fullName>
        <label>Value (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Plan Schedule Setting</label>
    <nameField>
        <label>Test Plan Schedule Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Plan Schedule Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>